--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
@@ -15,8 +16,9 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "build" : "webpack",
+    "build": "webpack",
     "start": "webpack serve",
-    "watch" : "webpack --watch"
+    "watch": "webpack --watch",
+    "test" : "jest --watch"
   }
 }
